--- a/ScrollTop.html
+++ b/ScrollTop.html
@@ -14,6 +14,13 @@
     <td width=10><img src="/Images/nopic.gif"></td>
     <td width="100%"><img src="/Images/nopic.gif"></td>
     <td width=10><img src="/Images/nopic.gif"></td>
+    <td width=16 bgcolor="#e4e4e4">
+        <table border=0 width=16 cellspacing=0 cellpadding=0>
+        <tr>
+        <td><img src="/Images/nopic.gif"></td>
+        </tr>
+        </table>
+    </td>
     </tr>
     </table>
 </td>
@@ -25,6 +32,13 @@
     <td width=10><img src="/Images/CadreHG.jpg"></td>
     <td width="100%"><img src="/Images/nopic.gif"></td>
     <td width=10><img src="/Images/CadreHD.jpg"></td>
+    <td width=16 bgcolor="#e4e4e4">
+        <table border=0 width=16 cellspacing=0 cellpadding=0>
+        <tr>
+        <td><img src="/Images/nopic.gif"></td>
+        </tr>
+        </table>
+    </td>
     </tr>
     </table>
 </td>
