--- a/ScrollBot.html
+++ b/ScrollBot.html
@@ -1,19 +1,26 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/transitional.dtd">
 <html>
 <head>
-<title>Le Classico: Photo Top</title>
+<title>Le Classico: Bottom</title>
 <meta name="Description" content="Site officiel du Classico">
 <meta name="Keywords" content="classico; music; deep; country; nashville; amis; amies">
 </head>
-<body bgcolor="#e4e4e4" style="margin-top: 0px;margin-bottom: 0px;margin-left: 0px;margin-right: 0px">
+<body bgcolor="#e4e4e4" style="margin-top: 0;margin-left: 0;margin-right: 0">
 <table border=0 width="100%" cellspacing=0 cellpadding=0>
 <tr>
 <td bgcolor="#ffffff">
     <table border=0 width="100%" cellspacing=0 cellpadding=0>
     <tr>
-    <td width=10><img src="/Images/CadreHG.jpg"></td>
+    <td width=10><img src="/Images/CadreBG.jpg"></td>
     <td width="100%"><img src="/Images/nopic.gif"></td>
-    <td width=10><img src="/Images/CadreHD.jpg"></td>
+    <td width=10><img src="/Images/CadreBD.jpg"></td>
+    <td width=16 bgcolor="#e4e4e4">
+        <table border=0 width=16 cellspacing=0 cellpadding=0>
+        <tr>
+        <td><img src="/Images/nopic.gif"></td>
+        </tr>
+        </table>
+    </td>
     </tr>
     </table>
 </td>
